# learning-dl-and-phys

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
docs/source/: conf.py  emacs-keybind.rst  emacs-magit.rst  emacs-org-agenda.rst  emacs-org-capture.rst  emacs-org-latex-class.rst  emacs-org-latex-packages.rst  emacs-org-latex.rst  emacs-org.rst  emacs-package.rst  emacs-prelude.rst  emacs-projectile.rst  emacs-twitter.rst  emacs-usage.rst  emacs-use-package.rst  emacs-yasnippet.rst  emacs-yatex.rst  index.rst  latex-install.rst  preface-kuma.rst  preface-root.rst  preface.rst  root-global-rootrc.rst  root-global-sethistlinewidth.rst  root-global-setndivisions.rst  root-global-setoptfit.rst  root-global-setoptlog.rst  root-global-setoptstat.rst  root-global-setpadgrid.rst  root-global-setrgb.rst  root-global-setstyle.rst  root-global-settimedisplay.rst  root-global.rst  root-hist.rst  root-install-homebrew.rst  root-install.rst  root-tutorial-calculator.rst  root-tutorial-demos.rst  root-tutorial-quit.rst  root-tutorial-start.rst  (+11 more)
docs/source/chap1/: 1-1.rst  index.rst
docs/source/chap2/: index.rst
