[tool.poetry]
name = "learning-dl-and-phys"
version = "0.0.0"
description = "Learning Deep Learning and Physics."
authors = ["pn11"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.1"
tag_format = "v$version"